--- a/client/web/index.html
+++ b/client/web/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <div id="elm"></div>
-<script src="elm.js"></script>
+<script src="js/elm.js"></script>
 <script>
     var app = Elm.Main.init({
         node: document.getElementById('elm')
