--- a/client/web/index.html
+++ b/client/web/index.html
@@ -3,21 +3,16 @@
 <head>
     <link rel="stylesheet"
           href="css/bootstrap.css">
-
-    <style>
-        .jumbotron {
-            background-color: #e6ffe6;
-            text-align: center;
-        }
-    </style>
+    <script src="js/elm.js"></script>
 </head>
 
 <body>
 <div id="elm"></div>
-<script src="js/elm.js"></script>
+
 <script>
-    var app = Elm.Main.init({
-        node: document.getElementById('elm')
+    Elm.Main.init({
+        node: document.getElementById('elm'),
+        flags: navigator.language
     });
 </script>
 </body>
