--- a/client/web/index.html
+++ b/client/web/index.html
@@ -10,9 +10,13 @@
 <div id="elm"></div>
 
 <script>
+    let savedSessionToken = sessionStorage.getItem("session-token") ?? '';
     Elm.Main.init({
         node: document.getElementById('elm'),
-        flags: navigator.language
+        flags: [
+            navigator.language,
+            savedSessionToken
+        ]
     });
 </script>
 </body>
