--- a/client-new/web/index.html
+++ b/client-new/web/index.html
@@ -4,12 +4,7 @@
 <head>
     <link rel="stylesheet"
           href="css/bootstrap.css">
-    <style>
-        .jumbotron {
-            background-color: #e6ffe6;
-            text-align: center;
-        }
-    </style>
+
     <script src="js/elm.js"></script>
 </head>
 
@@ -17,11 +12,12 @@
 <div id="elm"></div>
 
 <script>
+    let lang = localStorage.getItem("lang") ?? navigator.language;
     let savedSessionToken = sessionStorage.getItem("session-token") ?? '';
     Elm.Main.init({
         node: document.getElementById('elm'),
         flags: [
-            navigator.language,
+            lang,
             savedSessionToken
         ]
     });
