Login is working.
Error Handling and Logout are still to be done.

--- a/client-new/web/index.html
+++ b/client-new/web/index.html
@@ -24,6 +24,9 @@
     app.ports.setLang.subscribe(function (language) {
         localStorage.setItem("lang", language);
     });
+    app.ports.setToken.subscribe(function (token) {
+        sessionStorage.setItem("session-token", token);
+    });
 </script>
 </body>
 </html>
