Prepared for logout.
Error Handling and Logout are still to be done.

--- a/client-new/web/index.html
+++ b/client-new/web/index.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet"
           href="css/bootstrap.css">
+    <link rel="stylesheet"
+          href="css/bootstrap-icons.css">
 
     <script src="js/elm.js"></script>
 </head>
