--- a/client/web/index.html
+++ b/client/web/index.html
@@ -27,7 +27,7 @@
     app.ports.setLang.subscribe(function (language) {
         localStorage.setItem("lang", language);
     });
-    app.ports.setToken.subscribe(function (token) {
+    app.ports.setBrowserToken.subscribe(function (token) {
         sessionStorage.setItem("session-token", token);
     });
     app.ports.getShownMessageIds.subscribe(function () {
@@ -37,7 +37,7 @@
             messageElsArray.map((el) => Number.parseInt(el.id.substring(12)))
         );
     });
-    app.ports.showExpirationModal.subscribe(function (show) {
+    app.ports.showOrHideExpirationModal.subscribe(function (show) {
         const expirationModal = bootstrap.Modal.getOrCreateInstance('#expirationModal');
         show ? expirationModal.show(document) : expirationModal.hide(document)
     });
